...
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="visible" />

  <Button
      android:id="@+id/doneButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:text="DONE"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.471"
...
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline9"
      app:layout_constraintVertical_bias="0.515" />

  <ToggleButton
      android:id="@+id/favourite"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginTop="24dp"
      android:layout_marginBottom="24dp"
      android:background="@drawable/ic_baseline_favorite_border_24"
      android:textOff=""
...
