...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.OutfitListActivity">

    <GridView
        android:id="@+id/gridOutfitList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:numColumns="3"
        app:layout_constraintBottom_toTopOf="@+id/editOutfit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
